WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153227
Text::splitText doesn't update Range end points anchored on parent nodes
https://bugs.webkit.org/show_bug.cgi?id=153227
Summary
Text::splitText doesn't update Range end points anchored on parent nodes
Ryosuke Niwa
Reported
2016-01-19 01:39:29 PST
When splitText is called on a Text node, we fail to update Ranges whose boundary points' container nodes are the parent node of the Text node. Since splitText can insert a new node, we should be updating Ranges.
Attachments
Fixes the bug
(14.41 KB, patch)
2016-01-19 02:00 PST
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-01-19 02:00:43 PST
Created
attachment 269261
[details]
Fixes the bug
Antti Koivisto
Comment 2
2016-01-19 02:04:05 PST
r=me
Ryosuke Niwa
Comment 3
2016-01-19 02:47:21 PST
Committed
r195281
: <
http://trac.webkit.org/changeset/195281
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug